trying to fix white line on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -399,6 +399,7 @@
     }
 
     .main__image--card{
+        max-width: 100%;
         height: 425px;
         width: 425px;
     }
@@ -433,6 +434,7 @@
 
 @media screen and (max-width: 480px){
     .main__image--card{
+        max-width: 100%;
         height: 250px;
         width: 250px;
     }
